change image location

--- a/attractions.html
+++ b/attractions.html
@@ -28,7 +28,7 @@
               Khafre, and the Pyramid of Menkaure, along with their associated
               pyramid complexes and the Great Sphinx of Giza.
             </p>
-            <img src="images/pyramids-of-giza.jpg" />
+            <img src="pyramids-of-giza.jpg" />
           </section>
   
           <section>
@@ -39,7 +39,7 @@
               center of trade in the Mamluk era and named for one of its several
               historic caravanserais
             </p>
-            <img height="500" width=80% src="images/khan-alkhalili.jpg" />
+            <img height="500" width=80% src="khan-alkhalili.jpg" />
           </section>
         </article>
       </main>
