--- a/food.html
+++ b/food.html
@@ -31,7 +31,7 @@
               onions. Kushari's a perfect meal that is substantial, nutrient-packed and
               cheap. Exactly what the Egyptians were after!
             </p>
-            <img src="images/kushari.jpg" />
+            <img src="kushari.jpg" />
           </section>
   
           <section >
@@ -48,7 +48,7 @@
               Egypt is the actual origin of those delightful fried treats. A
               perfect dish for all you vegos!
             </p>
-            <img src="images/egyptian-ful.jpg"/>
+            <img src="egyptian-ful.jpg"/>
           </section>
         </article>
       </main>
